<resources>
    <string name="app_name">Parly</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Usename">Usename</string>
    <string name="Email">Email</string>
    <string name="Password">Password</string>
    <string name="login">Login</string>
    <string name="signup">SignUp</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="discussionlist">Discussion</string>
    <string name="Users">Users</string>
    <string name="Request">Request</string>
    <string name="profile">Profile</string>
    <string name="logOut">LogOut</string>
    <string name="setting">Settings</string>
    <string name="editprofile">Edit Profile</string>
    <string name="opendiscussion">Open Discussion</string>
    <string name="repassword">Re-Password</string>
    <string name="save">Save</string>
    <string name="changebackgrounds">Change Background</string>

    <string name="apply">Apply</string>
    <string name="changepassword">Change Password</string>
    <string name="delete_account">Delete My Account</string>
    <string name="current_password">Current Password</string>
    <string name="new_password">Now Password</string>
    <string name="send_request">Send Request</string>
    <string name="back">Back</string>
    <string name="unfriend">Unfriend</string>


</resources>
