<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".resetPassword">

    <LinearLayout
        android:id="@+id/linearlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:orientation="vertical">


        <EditText
            android:id="@+id/current_password"
            android:layout_width="match_parent"
            android:layout_height="@dimen/editviewheight"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="50dp"
            android:background="@drawable/editview"
            android:fontFamily="@font/twopathregular"
            android:foregroundGravity="center"
            android:hint="@string/current_password"
            android:inputType="text"
            android:paddingLeft="20dp"
            android:textColor="@color/black"
            android:textColorHint="@color/blackmiddle"
            android:textSize="@dimen/editview" />
        <EditText
            android:id="@+id/new_password"
            android:layout_width="match_parent"
            android:layout_height="@dimen/editviewheight"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="50dp"
            android:background="@drawable/editview"
            android:fontFamily="@font/twopathregular"
            android:foregroundGravity="center"
            android:hint="@string/new_password"
            android:inputType="textPassword"
            android:paddingLeft="20dp"
            android:textColor="@color/black"
            android:textColorHint="@color/blackmiddle"
            android:textSize="@dimen/editview" />

        <EditText
            android:id="@+id/re_password"
            android:layout_width="match_parent"
            android:layout_height="@dimen/editviewheight"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="50dp"
            android:background="@drawable/editview"
            android:fontFamily="@font/twopathregular"
            android:foregroundGravity="center"
            android:hint="@string/repassword"
            android:inputType="textPassword"
            android:paddingLeft="20dp"
            android:textColor="@color/black"
            android:textColorHint="@color/blackmiddle"
            android:textSize="@dimen/editview" />

        <Button
            android:id="@+id/savepassword"
            android:layout_width="match_parent"
            android:layout_height="@dimen/editviewheight"
            android:layout_below="@id/linearlayout"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="50dp"
            android:background="@drawable/btn"
            android:fontFamily="@font/lunchtype25mediumcondensed"
            android:foregroundGravity="center"
            android:text="@string/save"
            android:textColor="@color/black"
            android:textSize="@dimen/editview"

            />
    </LinearLayout>

</RelativeLayout>